<resources>
    <string name="app_name" translatable="false">Yet Another Weather Application</string>
    <string name="language_code">en</string>
    <string name="temperature_format">Temperature</string>
    <string name="temperature_default" translatable="false">metric</string>
    <string name="temperature_format_default" translatable="false">metric</string>
    <string name="automatic_update">Update automatically?</string>
    <string name="update_interval_title">Update interval</string>
    <string name="welcome">Welcome to YAWA application</string>
    <string name="addCityBtn">Add City</string>
    <string name="action_manage_cities">Manage Cities</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_debug" translatable="false">Debug</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="pull_down_to_refresh">Pull down to refresh</string>
    <string name="temperature_min_max">Temperature (Min/Max):</string>
    <string name="wind">Wind:</string>
    <string name="clouds">Clouds:</string>
    <string name="rain">Rain:</string>
    <string name="about_lbl_datasource">Datasource</string>
    <string name="about_datasource" translatable="false">OpenWeatherAPI</string>
    <string name="about_lbl_author">Authors</string>
    <string name="about_author" translatable="false">Nuno Caro \n Hélio Fitas \n Angelo Mestre</string>
    <string name="progress_title">Loading</string>
    <string name="progress_message">Wait while loading...</string>
    <string name="delete_message">Delete city?</string>
    <string name="delete_title">Delete</string>
    <string name="generic_yes">YES</string>
    <string name="generic_no">NO</string>
    <string name="add_city_before_update">Add a city first before update</string>
    <string name="cities_updated_with_error">Some cities cannot be updated. Try again.</string>
    <string name="cities_updated">Cities updated</string>
    <string name="preference_update_wifi_only">Update from Wifi only</string>
    <string name="no_available_network">No network available for the current settings. Please check connectivity and if the only update method is Wifi.</string>
    <string name="receive_notifications">Receive notifications?</string>
    <string name="notification_from">from</string>
    <string name="notification_to">to</string>
    <string name="notification_title">Weather on %1$s as changed</string>
    <string name="debug_random_temp_title" translatable="false">DEBUG: Random temperature</string>
</resources>
