<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.isel.pdm.yawa.activities.AboutActivity">

    <TextView
        android:text="@string/about_lbl_datasource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/txtlblDataSource" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/about_datasource"
        android:ems="10"
        android:enabled="false"
        android:layout_below="@+id/txtlblDataSource"
        android:id="@+id/txtDatasource"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/about_lbl_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDatasource"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtlblAuthor" />

    <EditText
        android:text="@string/about_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:enabled="false"
        android:id="@+id/txtAuthor"
        android:textAlignment="center"
        android:layout_below="@+id/txtlblAuthor"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
