<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="pt.isel.pdm.yawa.activities.WeatherDetails">

    <TextView
        android:text="City"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:id="@+id/txtCityName" />

    <TextView
        android:text="Day"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:id="@+id/txtDay" />

    <com.android.volley.toolbox.NetworkImageView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight=".20"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:id="@+id/imgWeatherIcon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".15"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/temp_block">

        <TextView
            android:text="@string/temperature_min_max"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:id="@+id/txtTemp" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight=".60"
            android:layout_height="match_parent"
            android:id="@+id/etxtTemp"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".15"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/wind_block">

        <TextView
            android:text="@string/wind"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:id="@+id/txtWind" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="match_parent"
            android:id="@+id/etxtWindSpeed"
            android:enabled="false"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="match_parent"
            android:id="@+id/etxtWindDegree"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".15"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/cloud_block">

        <TextView
            android:text="@string/clouds"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:id="@+id/txtCloud" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight=".60"
            android:layout_height="match_parent"
            android:id="@+id/etxtCloud"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".15"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/rain_block">

        <TextView
            android:text="@string/rain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:id="@+id/txtRain" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight=".60"
            android:layout_height="match_parent"
            android:id="@+id/etxtRain"
            android:enabled="false"/>

    </LinearLayout>


</LinearLayout>
